--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,17 +80,18 @@ section{
 body{
     font-family: sans-serif;
     margin: auto;
-    position: relative;
     background-color: #ece7e7!important;
-
 }
 /* Navbar  */
 #Main_navbar{
     height: 70px;
-    width: 100%;
+    left: 0px;
+    right: 0px;
+    top: 0px;
     background: #fff;
     position: fixed;
     z-index: 3;
+    max-width: 100vw;
 }
 .w-fit-content{
     width: fit-content;
