--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -50,16 +50,17 @@
 
 .newsletter-form button {
     padding: 10px 20px;
-    background-color: #f16642;
+    background-color: var(--color-secondary);
     color: white;
     border: none;
     border-radius: 0 5px 5px 0;
     cursor: pointer;
     font-size: 16px;
+    min-width: fit-content;
 }
 
 .newsletter-form button:hover {
-    background-color: #d55436;
+    background-color: var(--color-secondary);
 }
 
 /* Contact Section */
