--- a/static/css/experties.css
+++ b/static/css/experties.css
@@ -18,9 +18,9 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     transition: transform 0.3s;
     margin: 0 10px; /* Slight gap between boxes */
-    border: 1px #000 solid;
     min-width: 250px;
     margin: auto;
+    margin-top: 20px;
 }
 
 .service-box:hover {
