--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -45,7 +45,8 @@
     font-size: 16px;
     border: none;
     border-radius: 5px 0 0 5px;
-    width: 300px;
+    min-width: 250px;
+    width: 400px;
 }
 
 .newsletter-form button {
