--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,6 +95,9 @@ body{
     z-index: 3;
     max-width: 100vw;
 }
+#Main_navbar > .container{
+    flex-wrap: nowrap!important;
+}
 .w-fit-content{
     width: fit-content;
 }
